--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./static/assets/other/element-ui/fonts/icon.css">
     <script src="./static/assets/other/element-ui/index.js"></script>
 
-    <script src="./static/assets/other/Sortable/Sortable.min.js"></script>
+    <!-- <script src="./static/assets/other/Sortable/Sortable.min.js"></script> -->
 
     <!-- <script src="./static/assets/other/echars/echarts.min.js"></script> -->
 
