--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>首页</title>
     
-    <link rel="stylesheet" href="./static/assets/other/layui/layui.css">
+    <!-- <link rel="stylesheet" href="./static/assets/other/layui/layui.css">
     <script src="./static/assets/other/layui/layui.js"></script>
 
-    <script src="./static/assets/other/tinymce/v5_5_0/tinymce.min.js"></script>
+    <script src="./static/assets/other/tinymce/v5_5_0/tinymce.min.js"></script> -->
 
     <script src="./static/assets/other/i18n/vue-i18n.js"></script>
     <script src="./static/assets/other/vue/vue.js"></script>
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./static/assets/other/element-ui/fonts/icon.css">
     <script src="./static/assets/other/element-ui/index.js"></script>
 
-    <!-- <script src="./static/assets/other/Sortable/Sortable.min.js"></script> -->
+    <script src="./static/assets/other/Sortable/Sortable.min.js"></script>
 
     <!-- <script src="./static/assets/other/echars/echarts.min.js"></script> -->
 
