--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <link href="./static/assets/other/gridstack/gridstack.css" rel="stylesheet"/>
     <link href="./static/assets/other/gridstack/gridstack-extra.css" rel="stylesheet"/>
+    <link href="./static/assets/other/gridstack/update_class.css" rel="stylesheet"/>
     <script src="./static/assets/other/gridstack/gridstack-h5.js"></script>
 
   </head>
