完成颜色修改

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!---后台管理系统插件--->
     <link rel="stylesheet" href="./static/assets/other/element-ui/index.css">
     <link rel="stylesheet" href="./static/assets/other/element-ui/fonts/icon.css">
+    
     <script src="./static/assets/other/element-ui/index.js"></script>
 
     <script src="./static/assets/other/Sortable/Sortable.min.js"></script>
@@ -32,7 +33,8 @@
     <link href="./static/assets/other/gridstack/gridstack-extra.css" rel="stylesheet"/>
     <link href="./static/assets/other/gridstack/update_class.css" rel="stylesheet"/>
     <script src="./static/assets/other/gridstack/gridstack-h5.js"></script>
-
+    
+    <link rel="stylesheet" href="./static/assets/css/color.css">
   </head>
   <body>
     <div id="home_sys"></div>
