部分表单验证

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="./static/assets/other/gridstack/gridstack-h5.js"></script>
     
     <link rel="stylesheet" href="./static/assets/css/color.css">
+    <script src="./static/assets/js/ApplicationBuilder.js"></script>
   </head>
   <body>
     <div id="home_sys"></div>
