--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>首页</title>
+    <title>服务中台</title>
     
     <!-- <link rel="stylesheet" href="./static/assets/other/layui/layui.css">
     <script src="./static/assets/other/layui/layui.js"></script>
