--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <link href="./static/assets/other/gridstack/gridstack-extra.css" rel="stylesheet"/>
     <link href="./static/assets/other/gridstack/update_class.css" rel="stylesheet"/>
     <script src="./static/assets/other/gridstack/gridstack-h5.js"></script>
+    <script src="./static/assets/other/rxjs.umd.js"></script>
     
     <link rel="stylesheet" href="./static/assets/css/color.css">
     
