--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script src="./static/assets/other/gridstack/gridstack-h5.js"></script>
     <script src="./static/assets/other/rxjs.umd.js"></script>
     
-    <link rel="stylesheet" href="./static/assets/css/color.css">
+    <link rel="stylesheet" href="http://192.168.21.71:9000/status_publick/css/color.css">
     
   </head>
   <body>
