--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <link href="./static/assets/other/gridstack/update_class.css" rel="stylesheet"/>
     <script src="./static/assets/other/gridstack/gridstack-h5.js"></script>
     <script src="./static/assets/other/rxjs.umd.js"></script>
+    <script src="./static/assets/other/echars/echarts.min.js"></script>
     
     <link rel="stylesheet" href="http://192.168.21.71:9000/status_publick/css/color.css">
     
