--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="./static/assets/other/axios/axios.min.js"></script>
     <script src="./static/assets/other/axios/qs.min.js"></script>
     <script src="http://192.168.21.71:9000/status_publick/js/ApplicationBuilder.js"></script>
+    <!-- <script src="http://202.202.12.19:800/public/js/ApplicationBuilder.js"></script> -->
     <script src="./static/assets/other/babel-polyfill/polyfill.min.js"></script>
 
     <!---后台管理系统插件--->
@@ -38,6 +39,7 @@
     <script src="./static/assets/other/echars/echarts.min.js"></script>
     
     <link rel="stylesheet" href="http://192.168.21.71:9000/status_publick/css/color.css">
+    <!-- <link rel="stylesheet" href="http://202.202.12.19:800/public/css/color.css"> -->
     
   </head>
   <body>
