更改文件上传路径

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="./static/assets/other/axios/qs.min.js"></script>
     <script src="http://192.168.21.71:9000/status_publick/js/ApplicationBuilder.js"></script>
     <!-- <script src="http://202.202.12.19:800/public/js/ApplicationBuilder.js"></script> -->
-    <script src="./static/assets/other/babel-polyfill/polyfill.min.js"></script>
+    <!-- <script src="./static/assets/other/babel-polyfill/polyfill.min.js"></script> -->
 
     <!---后台管理系统插件--->
     <link rel="stylesheet" href="./static/assets/other/element-ui/index.css">
