--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="./static/assets/other/axios/qs.min.js"></script>
     <script src="http://192.168.21.46:6900/public/js/ApplicationBuilder.js"></script>
     <!-- <script src="http://202.202.12.19:800/public/js/ApplicationBuilder.js"></script> -->
-    <!-- <script src="./static/assets/other/babel-polyfill/polyfill.min.js"></script> -->
+    <script src="./static/assets/other/babel-polyfill/polyfill.min.js"></script>
 
     <!---后台管理系统插件--->
     <link rel="stylesheet" href="./static/assets/other/element-ui/index.css">
@@ -26,8 +26,6 @@
     <script src="./static/assets/other/element-ui/index.js"></script>
 
     <script src="./static/assets/other/Sortable/Sortable.min.js"></script>
-
-    <!-- <script src="./static/assets/other/echars/echarts.min.js"></script> -->
 
     <script src="./static/assets/other/vue-cropper/dist/index.js"></script>
 
@@ -40,7 +38,8 @@
     
     <link rel="stylesheet" href="http://192.168.21.46:6900/public/css/color.css"/>
 	  <link rel="stylesheet" href="http://192.168.21.46:6900/public/css/public.css"/>
-    <!-- <link rel="stylesheet" href="http://202.202.12.19:800/public/css/color.css"> -->
+    <!-- <link rel="stylesheet" href="http://202.202.12.19:800/public/css/public.css"/>
+    <link rel="stylesheet" href="http://202.202.12.19:800/public/css/color.css"> -->
     
   </head>
   <body>
