头部底部选中状态

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>服务中台</title>
     
     <!-- <link rel="stylesheet" href="./static/assets/other/layui/layui.css">
-    <script src="./static/assets/other/layui/layui.js"></script>
+    <script src="./static/assets/other/layui/layui.js"></script> -->
 
-    <script src="./static/assets/other/tinymce/v5_5_0/tinymce.min.js"></script> -->
+    <!-- <script src="./static/assets/other/tinymce/v5_5_0/tinymce.min.js"></script> -->
 
     <script src="./static/assets/other/i18n/vue-i18n.js"></script>
     <script src="./static/assets/other/vue/vue.js"></script>
