--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="./static/assets/other/vue/vue.js"></script>
     <script src="./static/assets/other/axios/axios.min.js"></script>
     <script src="./static/assets/other/axios/qs.min.js"></script>
+    <!-- <script src="./static/assets/js/ApplicationBuilder.js"></script> -->
     <script src="http://192.168.21.46:6900/public/js/ApplicationBuilder.js"></script>
     <!-- <script src="http://202.202.12.19:800/public/js/ApplicationBuilder.js"></script> -->
     <script src="./static/assets/other/babel-polyfill/polyfill.min.js"></script>
