--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
     <script src="./static/assets/other/axios/axios.min.js"></script>
     <script src="./static/assets/other/axios/qs.min.js"></script>
     <!--下面两个（rxjs.umd.js/searchExpressionResolver.js）主要是针对检索框的-->
-    <script src="./static/assets/js/rxjs.umd.js"></script>
-    <script src="./static/assets/js/searchExpressionResolver.js"></script>
+    <script src="http://192.168.21.46:6900/public/js/rxjs.umd.js"></script>
+    <script src="http://192.168.21.46:6900/public/js/searchExpressionResolver.js"></script>
+
+    <!-- <script src="http://smart.vipslib.com/static/assets/js/rxjs.umd.js"></script>
+    <script src="http://smart.vipslib.com/static/assets/js/searchExpressionResolver.js"></script> -->
+    
     <script src="./static/assets/other/babel-polyfill/polyfill.min.js"></script>
 
     <!---后台管理系统插件--->
@@ -43,6 +47,10 @@
     <link rel="stylesheet" href="http://192.168.21.46:6900/public/css/color.css"/>
 	  <link rel="stylesheet" href="http://192.168.21.46:6900/public/css/public.css"/>
     
+    <!-- <link rel="stylesheet" href="https://smart.vipslib.com/cdn/public/css/color.css"/>
+	  <link rel="stylesheet" href="https://smart.vipslib.com/cdn/public/css/public.css"/>
+    <script src="https://smart.vipslib.com/cdn/public/js/ApplicationBuilder.js"></script> -->
+
     <!-- <script src="http://202.202.12.19:800/public/js/ApplicationBuilder.js"></script>
     <link rel="stylesheet" href="http://202.202.12.19:800/public/css/public.css"/>
     <link rel="stylesheet" href="http://202.202.12.19:800/public/css/color.css"> -->
