--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <script src="http://192.168.21.46:6900/public/js/rxjs.umd.js"></script>
     <script src="http://192.168.21.46:6900/public/js/searchExpressionResolver.js"></script>
 
-    <!-- <script src="http://smart.vipslib.com/static/assets/js/rxjs.umd.js"></script>
-    <script src="http://smart.vipslib.com/static/assets/js/searchExpressionResolver.js"></script> -->
+    <!-- <script src="https://smart.vipslib.com/static/assets/js/rxjs.umd.js"></script>
+    <script src="https://smart.vipslib.com/static/assets/js/searchExpressionResolver.js"></script> -->
     
     <!-- <script src="http://202.202.12.19:800/cdn/public/js/rxjs.umd.js"></script>
     <script src="http://202.202.12.19:800/cdn/public/js/searchExpressionResolver.js"></script> -->
