增加底部富文本

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <script src="./static/assets/other/vue/vue.js"></script>
     <script src="./static/assets/other/axios/axios.min.js"></script>
     <script src="./static/assets/other/axios/qs.min.js"></script>
-
+    <script src="./static/assets/other/tinymce/v5_5_0/tinymce.min.js"></script>
+    
     <!--下面两个（rxjs.umd.js/searchExpressionResolver.js）主要是针对检索框的-->
     <script src="http://192.168.21.46:6900/public/js/rxjs.umd.js"></script>
     <script src="http://192.168.21.46:6900/public/js/searchExpressionResolver.js"></script>
