--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     
     <script src="http://192.168.21.46:6900/public/js/ApplicationBuilder.js"></script>
     <link rel="stylesheet" href="http://192.168.21.46:6900/public/css/color.css"/>
+    <link rel="stylesheet" href="http://192.168.21.46:6900/public/css/vipsmart-dalib3-skin.css"/>
 	  <link rel="stylesheet" href="http://192.168.21.46:6900/public/css/public.css"/>
     
     <!-- <link rel="stylesheet" href="https://smart.vipslib.com/cdn/public/css/color.css"/>
