--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <script src="http://192.168.21.46:6900/public/js/rxjs.umd.js"></script>
     <script src="http://192.168.21.46:6900/public/js/searchExpressionResolver.js"></script>
 
+    <!-- <script src="../cdn/public/js/rxjs.umd.js"></script>
+    <script src="../cdn/public/js/searchExpressionResolver.js"></script> -->
+
     <!-- <script src="https://smart.vipslib.com/static/assets/js/rxjs.umd.js"></script>
     <script src="https://smart.vipslib.com/static/assets/js/searchExpressionResolver.js"></script> -->
     
@@ -40,6 +43,10 @@
     <script src="http://192.168.21.46:6900/public/js/ApplicationBuilder.js"></script>
     <link rel="stylesheet" href="http://192.168.21.46:6900/public/css/vipsmart-dalib3-skin.css"/>
 	  <link rel="stylesheet" href="http://192.168.21.46:6900/public/css/public.css"/>
+
+    <!-- <script src="../cdn/public/js/ApplicationBuilder.js"></script>
+    <link rel="stylesheet" href="../cdn/public/css/vipsmart-dalib3-skin.css"/>
+	  <link rel="stylesheet" href="../cdn/public/css/public.css"/> -->
     
     <!-- <link rel="stylesheet" href="https://smart.vipslib.com/cdn/public/css/color.css"/>
 	  <link rel="stylesheet" href="https://smart.vipslib.com/cdn/public/css/public.css"/>
