--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <script src="http://192.168.21.46:6900/public/js/rxjs.umd.js"></script>
     <script src="http://192.168.21.46:6900/public/js/searchExpressionResolver.js"></script>
 
-    <!-- <script src="../cdn/public/js/rxjs.umd.js"></script>
-    <script src="../cdn/public/js/searchExpressionResolver.js"></script> -->
+    <!-- <script src="<%= htmlWebpackPlugin.options.htmlFileUrl %>public/js/rxjs.umd.js"></script>
+    <script src="<%= htmlWebpackPlugin.options.htmlFileUrl %>public/js/searchExpressionResolver.js"></script> -->
     <!-- <script src="https://smart.vipslib.com/static/assets/js/rxjs.umd.js"></script>
     <script src="https://smart.vipslib.com/static/assets/js/searchExpressionResolver.js"></script> -->
     <!-- <script src="http://202.202.12.19:800/cdn/public/js/rxjs.umd.js"></script>
@@ -40,9 +40,9 @@
     <link rel="stylesheet" href="http://192.168.21.46:6900/public/css/vipsmart-dalib3-skin.css"/>
 	  <link rel="stylesheet" href="http://192.168.21.46:6900/public/css/public.css"/>
 
-    <!-- <script src="../cdn/public/js/ApplicationBuilder.js"></script>
-    <link rel="stylesheet" href="../cdn/public/css/vipsmart-dalib3-skin.css"/>
-	  <link rel="stylesheet" href="../cdn/public/css/public.css"/> -->
+    <!-- <script src="<%= htmlWebpackPlugin.options.htmlFileUrl %>public/js/ApplicationBuilder.js"></script>
+    <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.htmlFileUrl %>public/css/vipsmart-dalib3-skin.css"/>
+	  <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.htmlFileUrl %>public/css/public.css"/> -->
     
     <!-- <link rel="stylesheet" href="https://smart.vipslib.com/cdn/public/css/color.css"/>
 	  <link rel="stylesheet" href="https://smart.vipslib.com/cdn/public/css/public.css"/>
