--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <script src="./static/assets/other/axios/qs.min.js"></script>
     <script src="./static/assets/other/tinymce/v5_5_0/tinymce.min.js"></script>
     <!--下面两个（rxjs.umd.js/searchExpressionResolver.js）主要是针对检索框的-->
-    <script src="http://192.168.21.46:6900/public/js/rxjs.umd.js"></script>
-    <script src="http://192.168.21.46:6900/public/js/searchExpressionResolver.js"></script>
+    <!-- <script src="http://192.168.21.46:6900/public/js/rxjs.umd.js"></script>
+    <script src="http://192.168.21.46:6900/public/js/searchExpressionResolver.js"></script> -->
 
-    <!-- <script src="<%= htmlWebpackPlugin.options.htmlFileUrl %>public/js/rxjs.umd.js"></script>
-    <script src="<%= htmlWebpackPlugin.options.htmlFileUrl %>public/js/searchExpressionResolver.js"></script> -->
+    <script src="<%= htmlWebpackPlugin.options.htmlFileUrl %>public/js/rxjs.umd.js"></script>
+    <script src="<%= htmlWebpackPlugin.options.htmlFileUrl %>public/js/searchExpressionResolver.js"></script>
     <!-- <script src="https://smart.vipslib.com/static/assets/js/rxjs.umd.js"></script>
     <script src="https://smart.vipslib.com/static/assets/js/searchExpressionResolver.js"></script> -->
     <!-- <script src="http://202.202.12.19:800/cdn/public/js/rxjs.umd.js"></script>
@@ -36,13 +36,13 @@
     <script src="./static/assets/other/gridstack/gridstack-h5.js"></script>
     <script src="./static/assets/other/echars/echarts.min.js"></script>
     
-    <script src="http://192.168.21.46:6900/public/js/ApplicationBuilder.js"></script>
+    <!-- <script src="http://192.168.21.46:6900/public/js/ApplicationBuilder.js"></script>
     <link rel="stylesheet" href="http://192.168.21.46:6900/public/css/vipsmart-dalib3-skin.css"/>
-	  <link rel="stylesheet" href="http://192.168.21.46:6900/public/css/public.css"/>
+	  <link rel="stylesheet" href="http://192.168.21.46:6900/public/css/public.css"/> -->
 
-    <!-- <script src="<%= htmlWebpackPlugin.options.htmlFileUrl %>public/js/ApplicationBuilder.js"></script>
+    <script src="<%= htmlWebpackPlugin.options.htmlFileUrl %>public/js/ApplicationBuilder.js"></script>
     <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.htmlFileUrl %>public/css/vipsmart-dalib3-skin.css"/>
-	  <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.htmlFileUrl %>public/css/public.css"/> -->
+	  <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.htmlFileUrl %>public/css/public.css"/>
     
     <!-- <link rel="stylesheet" href="https://smart.vipslib.com/cdn/public/css/color.css"/>
 	  <link rel="stylesheet" href="https://smart.vipslib.com/cdn/public/css/public.css"/>
