--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script src="./static/assets/other/gridstack/gridstack-h5.js"></script>
     <script src="./static/assets/other/echars/echarts.min.js"></script>
     
-    <!-- <script src="http://192.168.21.46:6900/public/js/ApplicationBuilder.js"></script>
+    <!-- <script src="http://192.168.21.46/cdn/public/js/ApplicationBuilder.js"></script>
     <link rel="stylesheet" href="http://192.168.21.46:6900/public/css/vipsmart-dalib3-skin.css"/>
 	  <link rel="stylesheet" href="http://192.168.21.46:6900/public/css/public.css"/> -->
 
