删除多余代码

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
   <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.local%>element-ui/index.css">
   <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.local%>element-ui/fonts/icon.css">
-  <!-- <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.local%>gridstack/gridstack-extra.css"/> -->
   <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.local%>gridstack/update_class.css" />
   <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.local%>gridstack/gridstack.css" />
   <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.htmlFileUrl %>public/css/vipsmart-dalib3-skin.css" />
@@ -27,12 +26,10 @@
   <script src="<%= htmlWebpackPlugin.options.local%>tinymce/v5_5_0/tinymce.min.js"></script>
   <script src="<%= htmlWebpackPlugin.options.local%>element-ui/index.js"></script>
   <script src="<%= htmlWebpackPlugin.options.local%>Sortable/Sortable.min.js"></script>
-  <script src="<%= htmlWebpackPlugin.options.local%>vue-cropper/dist/index.js"></script>
+  <script src="<%= htmlWebpackPlugin.options.local%>vue-cropper/index.js"></script>
   <script src="<%= htmlWebpackPlugin.options.local%>gridstack/gridstack-h5.js"></script>
   <script src="<%= htmlWebpackPlugin.options.local%>echars/echarts.min.js"></script>
-
   <!--下面两个（rxjs.umd.js/searchExpressionResolver.js）主要是针对检索框的-->
-
   <script src="<%= htmlWebpackPlugin.options.htmlFileUrl %>public/js/rxjs.umd.js"></script>
   <script src="<%= htmlWebpackPlugin.options.htmlFileUrl %>public/js/searchExpressionResolver.js"></script>
   <script src="<%= htmlWebpackPlugin.options.htmlFileUrl %>public/js/ApplicationBuilder.js"></script>
